--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -14,6 +14,9 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@ignite-ui/react": "*",
+    "@ignite-ui/tokens": "*",
+    "@ignite-ui/eslint-config": "*",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
