--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "turbo run dev --parallel",
+    "build": "turbo run build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "turbo": "^2.1.1"
+  },
+  "packageManager": "npm@9.5.1"
 }
